# 15_puzzle

./: CMakeLists.txt  board.cpp  board.h  counter.py  main.cpp
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
builds/.cmake/api/v1/reply/: cache-v2-8bff3db80e9f1184de67.json  cmakeFiles-v1-b597a9008bb631fda50f.json  codemodel-v2-2a7ed5f2bcacf7f47835.json  index-2025-03-16T11-21-54-0410.json  target-game-Debug-a7c417ebc85549d5b27d.json
